--- a/Projekt1/Zad2/pom.xml
+++ b/Projekt1/Zad2/pom.xml
@@ -4,4 +4,16 @@
   <artifactId>projekt1zad2</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>Projekt1Zad2</name>
+  <dependencies>
+  	<dependency>
+  		<groupId>org.hamcrest</groupId>
+  		<artifactId>hamcrest-all</artifactId>
+  		<version>1.3</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  	</dependency>
+  </dependencies>
 </project>
